--- a/pages/work.html
+++ b/pages/work.html
@@ -78,23 +78,23 @@
 
         <div class="portfolio-grid fade-in">
           <!-- AI Explorations Projects -->
-          <div class="project-item" data-category="ai">
+          <a href="ai-video-storytelling.html" class="project-item" data-category="ai">
             <div class="project-thumbnail">
               <img class="project-image" src="../public/work/project-1/images/cbb-thumbnail.jpg"
                 alt="Caring Beyond Boundaries video thumbnail">
             </div>
             <h3 class="project-name">AI-Powered Video Storytelling</h3>
             <p class="project-type">AI Explorations</p>
-          </div>
+          </a>
 
-          <div class="project-item" data-category="ai">
+          <a href="ai-3d-modeling.html" class="project-item" data-category="ai">
             <div class="project-thumbnail">
               <img class="project-image" src="../public/work/project-2/images/claude-blender-ms-1080x1080.jpg"
                 alt="Using AI to Streamline 3D Modeling thumbnail">
             </div>
             <h3 class="project-name">Using AI to Streamline 3D Modeling</h3>
             <p class="project-type">AI Explorations</p>
-          </div>
+          </a>
 
           <div class="project-item" data-category="brand">
             <div class="project-thumbnail">
