--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     media="(max-width: 768px)">
 
   <link rel="stylesheet" href="styles.css">
-  <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 </head>
@@ -55,7 +55,7 @@
 
 
 
-  <div data-scroll-container>
+  <div>
     <section class="hero">
       <!-- White overlay for fade-in effect -->
       <div class="page-loader"></div>
