--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 
   <link rel="stylesheet" href="styles.css">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollSmoother.min.js"></script>
 </head>
 
 <body>
@@ -53,9 +54,9 @@
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-
-
-  <div>
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
+      <div>
     <section class="hero">
       <!-- White overlay for fade-in effect -->
       <div class="page-loader"></div>
@@ -117,9 +118,24 @@
         <div class="line-wrapper"><span class="line">Great ideas begin with a conversation</span></div>
       </h2>
       <div class="footer-contact fade-in">
-        <a href="mailto:mscreativeonline@gmail.com" class="btn btn-outline magnetic-btn">mscreativeonline@gmail.com</a>
-        <a href="tel:+17632349542" class="btn btn-outline magnetic-btn">763.234.9542</a>
-        <a href="pages/contact.html" class="btn btn-primary magnetic-btn">Contact me</a>
+        <a href="mailto:mscreativeonline@gmail.com" class="btn btn-outline magnetic-btn wipe-btn">
+          <span class="btn-text">mscreativeonline@gmail.com</span>
+          <div class="circular-wipe-overlay">
+            <span class="btn-text-overlay">mscreativeonline@gmail.com</span>
+          </div>
+        </a>
+        <a href="tel:+17632349542" class="btn btn-outline magnetic-btn wipe-btn">
+          <span class="btn-text">763.234.9542</span>
+          <div class="circular-wipe-overlay">
+            <span class="btn-text-overlay">763.234.9542</span>
+          </div>
+        </a>
+        <a href="pages/contact.html" class="btn btn-primary magnetic-btn wipe-btn">
+          <span class="btn-text">Contact me</span>
+          <div class="circular-wipe-overlay">
+            <span class="btn-text-overlay">Contact me</span>
+          </div>
+        </a>
       </div>
     </footer>
     <div class="floating-menu-btn magnetic-btn">
@@ -140,6 +156,8 @@
         </ul>
       </div>
     </nav>
+      </div>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
