--- a/index.html
+++ b/index.html
@@ -20,7 +20,92 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mark Sexton | Portfolio</title>
+  <title>Mark Sexton - Creative Director & Digital Designer | Professional Portfolio</title>
+  
+  <!-- SEO and Business Meta Tags -->
+  <meta name="description" content="Mark Sexton is a Creative Director and digital designer specializing in brand strategy, web design, video production, AR experiences, and AI integration. Professional design services for healthcare, technology, and enterprise clients.">
+  <meta name="keywords" content="creative director, digital designer, brand strategy, web design, video production, augmented reality, AI integration, professional design services, portfolio, healthcare marketing, technology design">
+  <meta name="author" content="Mark Sexton">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="category" content="Business">
+  <meta name="classification" content="Professional Services">
+  <meta name="coverage" content="Worldwide">
+  <meta name="distribution" content="Global">
+  <meta name="rating" content="General">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Mark Sexton - Creative Director & Digital Designer">
+  <meta property="og:description" content="Professional design services including brand strategy, web design, video production, and emerging technology integration.">
+  <meta property="og:site_name" content="Mark Sexton Portfolio">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Business Contact Info -->
+  <meta name="contact" content="mscreativeonline@gmail.com">
+  <meta name="telephone" content="+1-763-234-9542">
+  
+  <!-- Professional Schema.org Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "Mark Sexton Creative Services",
+    "description": "Professional creative direction and digital design services specializing in brand strategy, web development, video production, and emerging technology integration.",
+    "provider": {
+      "@type": "Person",
+      "name": "Mark Sexton",
+      "jobTitle": "Creative Director",
+      "description": "Experienced Creative Director specializing in digital design, brand strategy, video production, augmented reality, and AI integration for healthcare and technology clients.",
+      "email": "mscreativeonline@gmail.com",
+      "telephone": "+1-763-234-9542",
+      "url": "https://msextoncreative.com",
+      "sameAs": [
+        "https://linkedin.com/in/marksexton"
+      ]
+    },
+    "serviceType": "Creative Services",
+    "areaServed": "Worldwide",
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Creative Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Brand Strategy & Design",
+            "description": "Comprehensive brand development and visual identity design"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Web Design & Development",
+            "description": "Professional website design and development services"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Video & Motion Graphics",
+            "description": "Professional video production and motion graphics"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Augmented Reality Experiences",
+            "description": "AR application development and immersive experiences"
+          }
+        }
+      ]
+    }
+  }
+  </script>
 
 
   <!-- Favicon -->
