--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,27 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Mark Sexton Portfolio</title>
+  <title>About Mark Sexton - Creative Director & Digital Designer | Professional Background</title>
+  
+  <!-- SEO and Business Meta Tags -->
+  <meta name="description" content="Learn about Mark Sexton, experienced Creative Director specializing in digital design, brand strategy, video production, and emerging technology integration. Professional background in healthcare and technology marketing.">
+  <meta name="keywords" content="creative director biography, digital designer background, professional experience, brand strategy expert, video production specialist, healthcare marketing, technology design, AI integration">
+  <meta name="author" content="Mark Sexton">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="category" content="Business">
+  <meta name="classification" content="Professional Services">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="profile">
+  <meta property="og:title" content="About Mark Sexton - Creative Director & Digital Designer">
+  <meta property="og:description" content="Professional background and expertise in creative direction, digital design, and emerging technology integration.">
+  <meta property="og:site_name" content="Mark Sexton Portfolio">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Business Contact Info -->
+  <meta name="contact" content="mscreativeonline@gmail.com">
+  <meta name="telephone" content="+1-763-234-9542">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../public/icons/favicon_io/apple-touch-icon.png">
