--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,27 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | Mark Sexton Portfolio</title>
+  <title>Contact Mark Sexton - Creative Director | Professional Design Services Inquiry</title>
+  
+  <!-- SEO and Business Meta Tags -->
+  <meta name="description" content="Contact Mark Sexton for professional creative direction and digital design services. Get in touch for brand strategy, web design, video production, AR experiences, and technology integration projects.">
+  <meta name="keywords" content="contact creative director, design services inquiry, professional consultation, brand strategy services, web design contact, video production services, business contact form">
+  <meta name="author" content="Mark Sexton">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="category" content="Business">
+  <meta name="classification" content="Professional Services">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contact Mark Sexton - Professional Design Services">
+  <meta property="og:description" content="Get in touch for professional creative direction and digital design services including brand strategy, web development, and technology integration.">
+  <meta property="og:site_name" content="Mark Sexton Portfolio">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Business Contact Info -->
+  <meta name="contact" content="mscreativeonline@gmail.com">
+  <meta name="telephone" content="+1-763-234-9542">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../public/icons/favicon_io/apple-touch-icon.png">
