--- a/pages/work.html
+++ b/pages/work.html
@@ -15,7 +15,27 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Work | Mark Sexton Portfolio</title>
+  <title>Work Portfolio - Mark Sexton Creative Director | Professional Design Projects</title>
+  
+  <!-- SEO and Business Meta Tags -->
+  <meta name="description" content="View Mark Sexton's professional portfolio of creative work including brand campaigns, web development, video production, AR experiences, and AI-powered design projects for healthcare and technology clients.">
+  <meta name="keywords" content="creative portfolio, design projects, brand campaigns, web development, video production, augmented reality, AI design, professional work, healthcare marketing, technology design">
+  <meta name="author" content="Mark Sexton">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="category" content="Business">
+  <meta name="classification" content="Professional Services">
+  
+  <!-- Open Graph / Social Media Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Professional Work Portfolio - Mark Sexton Creative Director">
+  <meta property="og:description" content="Professional portfolio showcasing creative projects, brand campaigns, and technology integration work.">
+  <meta property="og:site_name" content="Mark Sexton Portfolio">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Business Contact Info -->
+  <meta name="contact" content="mscreativeonline@gmail.com">
+  <meta name="telephone" content="+1-763-234-9542">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="../public/icons/favicon_io/apple-touch-icon.png">
